# DB-ecommerce

./: .gitignore  pyproject.toml
ecommerce/: settings.py  urls.py
ecommerce/migrations/: 0001_initial.py
products/: admin.py  inlines.py  models.py  views.py
products/migrations/: 0001_initial.py  0002_auto_20191211_2304.py  0002_auto_20191212_0318.py  0003_auto_20191216_1605.py  0004_auto_20191216_1651.py  0005_auto_20191216_1731.py  0006_product_waybill.py  0007_auto_20191216_1935.py  0008_auto_20191216_2013.py  0009_auto_20191216_2032.py  0010_auto_20191216_2149.py  0011_auto_20191218_1808.py
supply/: models.py
supply/migrations/: 0001_initial.py  0002_auto_20191216_1731.py
templates/admin/: base_site.html  login.html
