[tool.poetry]
name = "ecommerce"
version = "0.1.0"
description = ""
authors = ["Huynh Phuc Nghi <nghiktkt22@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
psycopg2 = "^2.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
